# axum_todo

./: .env  Cargo.toml
migrations/: 20220527150706_user.sql
scripts/: init_db.sh  watch.sh
src/: auth.rs  main.rs  pool.rs  routes.rs  session.rs  user.rs
src/routes/: login.rs  logout.rs  register.rs
