[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
argon2 = { version = "0.4.0", features = ["std"] }
axum = "0.5.6"
cookie = { version = "0.16.0", features = ["private"] }
rand = "0.8.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5.13", features = [
	"postgres",
	"runtime-tokio-rustls",
	"uuid",
] }
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.4.12"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
